# ginger

./: .env  .env.example  .gitignore  .replit  AUTOMATION_MODE_CONFIG.md  AUTOMATION_MODE_GUIDE.md  AZURE_OPENAI_OAUTH_SETUP.md  CODE_GENERATION_FEATURE_MATRIX.md  CONFIG_GUIDE.md  DOCUMENTATION.md  ENHANCED_SELF_HEALING.md  EXPORT_GUIDE.md  INTELLIGENT_LOCATOR_SELECTION.md  LOCAL_MODE_SETUP.md  LOGGING_GUIDE.md  MIGRATION_FIXES.md  MIGRATION_TO_AZURE.md  OAUTH_SETUP.md  PLAYWRIGHT_CODE_GENERATION_QUICKSTART.md  PLEASE_READ_WINDOWS.md  PRIVACY.md  PRIVACY_CONFIGURATION.md  PYTHON_USAGE.md  QUICKSTART.md  README.md  README_AUTOMATION.md  README_INTERACTIVE.md  README_MCP.md  SECURITY.md  SECURITY_SETUP.md  SETUP.md  SETUP_COMPLETE.md  STRICT_MODE_FIXES.md  WINDOWS_SETUP.md  WINDOWS_TROUBLESHOOTING.md  action_capture.py  ai_prompt_converter.py  app.py  application.py  automation_engine.py  (+64 more)
.mvenv/: pyvenv.cfg
app/: __init__.py  app.py  browser_agent.py  browser_use_engine.py  mcp_stdio_client.py  models.py  server.js  web_app.py
attached_assets/: Pasted--1-System-Overview-A-modular-AI-browser-automation-system-that-Accepts-1761154779001_1761154779002.txt  Pasted--2025-10-11-03-13-39-0000-1711-ERROR-Exception-in-worker-process1-Traceback-most-recent-call-1760152467065_1760152467066.txt  Pasted--2025-10-11-03-21-35-0000-3004-INFO-Starting-gunicorn-23-0-0-2025-10-11-03-21-35-0000-300-1760152925332_1760152925333.txt  Pasted--2025-10-14-20-25-17-0000-3255-INFO-HTTP-Request-POST-https-api-openai-com-v1-chat-completi-1760474330593_1760474330594.txt  (+63 more)
automation/: __init__.py  (+3 more)
(+369 files in other folders)
