[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "atlassian-python-api>=4.0.7",
    "flask>=3.1.2",
    "jira>=3.10.5",
    "openai>=2.6.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
